[workspace]
resolver = "2"
members = [
    "ports/mac",
]
exclude = [".cargo"]
[workspace.dependencies]
thiserror = "1.0.37"
anyhow = "1.0.69"
polars = "0.33.2"
bevy = "0.11.3"
rand = "0.8.5"
bevy-inspector-egui = "0.20"
bevy-debug-camera = "0.3.0"
bevy_flycam = "0.11.0"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
bevy_mod_picking ={ version = "0.15" }
bevy_transform_gizmo = "0.8.0"
bevy_hanabi = "0.7"
